--- a/wid_izdatki.ui
+++ b/wid_izdatki.ui
@@ -909,6 +909,12 @@
       <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
         <widget class="QTableWidget" name="tbl_letni_pregled">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
          <column>
           <property name="text">
            <string>tbl_letni_pregled</string>
