--- a/wid_poslovanje.ui
+++ b/wid_poslovanje.ui
@@ -1723,7 +1723,14 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QTableWidget" name="tbl_poslovanje"/>
+        <widget class="QTableWidget" name="tbl_poslovanje">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
