--- a/wid_prejetiracuni.ui
+++ b/wid_prejetiracuni.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>858</width>
+    <width>952</width>
     <height>709</height>
    </rect>
   </property>
@@ -136,6 +136,9 @@
     <widget class="QTableWidget" name="tbl_racuni">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::ExtendedSelection</enum>
