--- a/wid_projekti.ui
+++ b/wid_projekti.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>921</width>
+    <width>972</width>
     <height>663</height>
    </rect>
   </property>
@@ -143,6 +143,9 @@
     <widget class="QTableWidget" name="tbl_projekti">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
