--- a/wid_stranke.ui
+++ b/wid_stranke.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>918</width>
+    <width>941</width>
     <height>611</height>
    </rect>
   </property>
@@ -103,6 +103,9 @@
     <widget class="QTableWidget" name="tbl_stranke">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
