--- a/projekti.ui
+++ b/projekti.ui
@@ -44,8 +44,8 @@
          <property name="title">
           <string>Podatki o projektu</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_19">
+          <item>
            <layout class="QFormLayout" name="formLayout">
             <property name="fieldGrowthPolicy">
              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
@@ -123,16 +123,6 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="1">
-             <widget class="QDateEdit" name="txt_konec">
-              <property name="displayFormat">
-               <string>dd.MM.yyyy</string>
-              </property>
-              <property name="calendarPopup">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
             <item row="3" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_5">
               <item>
@@ -169,9 +159,30 @@
               </item>
              </widget>
             </item>
+            <item row="5" column="1">
+             <layout class="QHBoxLayout" name="horizontalLayout_18">
+              <item>
+               <widget class="QDateEdit" name="txt_konec">
+                <property name="displayFormat">
+                 <string>dd.MM.yyyy</string>
+                </property>
+                <property name="calendarPopup">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="txt_orig_datum_konca_dela">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
            </layout>
           </item>
-          <item row="0" column="1">
+          <item>
            <spacer name="horizontalSpacer_2">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -2445,7 +2456,6 @@
   <tabstop>txt_stranka_id</tabstop>
   <tabstop>txt_stranka</tabstop>
   <tabstop>txt_pricetek</tabstop>
-  <tabstop>txt_konec</tabstop>
   <tabstop>txt_status_projekta</tabstop>
   <tabstop>txt_st_izdanih_racunov</tabstop>
   <tabstop>txt_st_prejetih_racunov</tabstop>
