PODATKI O DELAVNIKIH LOČENI OD PRIJAVE
Podatki o št. delavnikov so se pridobivali ob zagonu programa. Pri tem
so onemogočili prijavno okno. V primeru težav s spletno stranjo, prek
katere so pridobivali podatke, je program zamrznil za več minut. Ni
sprejemljivo.

Rešitev je v premiku kode pridobivanja v glavno okno. Sedaj se podatki
pridobivajo na zahtevo uporabnika in imajo svoje okno.

closes #113

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -145,7 +145,7 @@ border:0;</string>
          <x>0</x>
          <y>0</y>
          <width>796</width>
-         <height>583</height>
+         <height>582</height>
         </rect>
        </property>
       </widget>
@@ -225,6 +225,7 @@ border:0;</string>
     <addaction name="actionKilometrina"/>
     <addaction name="actionDnevnice"/>
     <addaction name="actionCena_malice"/>
+    <addaction name="actionDelavniki"/>
    </widget>
    <addaction name="menuDelo"/>
    <addaction name="menuRa_unovodstvo"/>
@@ -366,6 +367,11 @@ border:0;</string>
   <action name="actionDopusti_bolni_ke">
    <property name="text">
     <string>Dopusti, bolniške</string>
+   </property>
+  </action>
+  <action name="actionDelavniki">
+   <property name="text">
+    <string>Delavniki</string>
    </property>
   </action>
  </widget>
