RAZVRŠČANJE OPRAVIL NA RAČUNU - MEHANIZEM PREUREJANJA TABELE
Tabelo opravil pri (pred)(plačilnem )računu je sedaj možno urejati.
Spreminjamo lahko vrstni red opravil. Izpis in baza podatkov še vedno
nespremenjena. TODO!!!

#117

--- a/racun.ui
+++ b/racun.ui
@@ -20,7 +20,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tab_racuni">
      <property name="currentIndex">
-      <number>4</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tab_podatki">
       <attribute name="title">
@@ -37,8 +37,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>690</width>
-            <height>716</height>
+            <width>702</width>
+            <height>761</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -800,6 +800,33 @@
              <widget class="QPushButton" name="btn_brisi_opravilo">
               <property name="text">
                <string>Izbriši opravilo</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_19">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btn_opravilo_gor">
+              <property name="text">
+               <string>Gor</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btn_opravilo_dol">
+              <property name="text">
+               <string>Dol</string>
               </property>
              </widget>
             </item>
