--- a/prejetiracuni_dodajddv.ui
+++ b/prejetiracuni_dodajddv.ui
@@ -31,7 +31,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QRadioButton" name="rd_vsi">
+          <widget class="QRadioButton" name="rb_vsi">
            <property name="text">
             <string>Vsi</string>
            </property>
@@ -40,7 +40,17 @@
         </layout>
        </item>
        <item>
-        <widget class="QTableWidget" name="tbl_ddv"/>
+        <widget class="QTableWidget" name="tbl_ddv">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SingleSelection</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
