--- a/racun.ui
+++ b/racun.ui
@@ -1058,6 +1058,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QPushButton" name="btn_izbris_zapisa_2">
+             <property name="text">
+              <string>Izbriši</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer name="horizontalSpacer_52">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
