FINISHING TOUCHES FOR ONE WINDOW MODE

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>GlavnoOkno</class>
  <widget class="QMainWindow" name="GlavnoOkno">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,8 +19,15 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::StrongFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>BenRačun: glavno okno</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>srcek.svg</normaloff>srcek.svg</iconset>
   </property>
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
@@ -136,6 +146,9 @@ border:0;</string>
     </item>
     <item>
      <widget class="QScrollArea" name="scrollArea">
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
