--- a/prijava.ui
+++ b/prijava.ui
@@ -3,7 +3,7 @@
  <class>prijava</class>
  <widget class="QDialog" name="prijava">
   <property name="windowModality">
-   <enum>Qt::NonModal</enum>
+   <enum>Qt::ApplicationModal</enum>
   </property>
   <property name="geometry">
    <rect>
