--- a/stranke.ui
+++ b/stranke.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>719</width>
+    <width>735</width>
     <height>699</height>
    </rect>
   </property>
@@ -64,7 +64,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tab_stranka">
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_podatki">
       <attribute name="title">
@@ -81,8 +81,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>652</width>
-            <height>849</height>
+            <width>680</width>
+            <height>910</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
@@ -120,7 +120,16 @@
                      <property name="sizeConstraint">
                       <enum>QLayout::SetDefaultConstraint</enum>
                      </property>
-                     <property name="margin">
+                     <property name="leftMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="rightMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin">
                       <number>0</number>
                      </property>
                      <item>
@@ -164,7 +173,16 @@
                      <property name="spacing">
                       <number>0</number>
                      </property>
-                     <property name="margin">
+                     <property name="leftMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="rightMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin">
                       <number>0</number>
                      </property>
                      <item>
@@ -217,7 +235,16 @@
                      <property name="spacing">
                       <number>0</number>
                      </property>
-                     <property name="margin">
+                     <property name="leftMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="rightMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin">
                       <number>0</number>
                      </property>
                      <item>
@@ -258,7 +285,16 @@
                      <property name="spacing">
                       <number>0</number>
                      </property>
-                     <property name="margin">
+                     <property name="leftMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="rightMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin">
                       <number>0</number>
                      </property>
                      <item>
@@ -755,8 +791,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>677</width>
-            <height>596</height>
+            <width>693</width>
+            <height>594</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_16">
@@ -1960,8 +1996,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>677</width>
-            <height>596</height>
+            <width>693</width>
+            <height>594</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
