OKNA NE IZGUBLJAJO VEČ FOKUSA, IMAJO IKONE IN NASLOVE
closes #126

--- a/nastavitve.ui
+++ b/nastavitve.ui
@@ -16,6 +16,10 @@
   <property name="windowTitle">
    <string>Programske nastavitve</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>srcek.svg</normaloff>srcek.svg</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <widget class="QGroupBox" name="groupBox">
