--- a/popusti.ui
+++ b/popusti.ui
@@ -16,6 +16,10 @@
   <property name="windowTitle">
    <string>BenRačun: Urejanje popustov</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>srcek.svg</normaloff>srcek.svg</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="groupBox">
