--- a/uporabnik.ui
+++ b/uporabnik.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>BenRačun: Urejanje zaposlenega</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>srcek.svg</normaloff>srcek.svg</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
